Restore API for running SHACL tests